--- a/package.json
+++ b/package.json
@@ -18,9 +18,7 @@
   },
   "license": "GPLv3",
   "dependencies": {
-    "koa": "*"
-  },
-  "engines": {
-    "node": ">=0.11.9"
+    "express": "*",
+    "coffee-script": "*"
   }
 }
