--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "jade": "*",
     "i18next": "*",
     "coffee-script": "*",
-    "mongous" : "*"
+    "mongous" : "*",
+    "eventproxy" : "0.2.6"
   }
 }
