remove --harmony in package.json

--- a/package.json
+++ b/package.json
@@ -14,7 +14,7 @@
     }
   ],
   "scripts": {
-    "start": "node --harmony app.js"
+    "start": "node app.js"
   },
   "license": "GPLv3",
   "dependencies": {
