--- a/package.json
+++ b/package.json
@@ -27,5 +27,11 @@
     "underscore": "*",
     "markdown": "*",
     "clone": "*"
+  },
+  "devDependencies": {
+    "gulp": "~3.5.6",
+    "gulp-coffee": "~1.4.1",
+    "gulp-less": "~1.2.3",
+    "gulp-uglify": "~0.2.1"
   }
 }
