--- a/package.json
+++ b/package.json
@@ -26,7 +26,8 @@
     "mongodb": "*",
     "underscore": "*",
     "markdown": "*",
-    "async": "*"
+    "async": "*",
+    "connect": "*"
   },
   "devDependencies": {
     "gulp": "~3.5.6",
