引入 harp 处理静态文件

--- a/package.json
+++ b/package.json
@@ -35,7 +35,8 @@
     "markdown": "*",
     "frisby": "*",
     "async": "*",
-    "connect": "*"
+    "connect": "*",
+    "harp": "*"
   },
   "devDependencies": {
     "gulp": "~3.5.6",
