--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "start": "make run"
   },
   "dependencies": {
+    "jade": "*",
     "express": "*",
     "coffee-script": "*",
     "mongodb": "*",
