因为 pm2 有安全问题更换为 forever

--- a/package.json
+++ b/package.json
@@ -30,7 +30,7 @@
     "mongodb": "*",
     "underscore": "*",
     "jasmine-node": "~1.14.3",
-    "pm2": "*",
+    "forever": "*",
     "markdown": "*",
     "frisby": "*",
     "async": "*",
