use middleware-injector

--- a/package.json
+++ b/package.json
@@ -35,6 +35,7 @@
     "frisby": "*",
     "async": "*",
     "connect": "*",
-    "harp": "*"
+    "harp": "*",
+    "middleware-injector": "*"
   }
 }
