--- a/plugin/phpfpm/template/fpm-pool.conf
+++ b/plugin/phpfpm/template/fpm-pool.conf
@@ -20,4 +20,4 @@ request_terminate_timeout = 15s
 
 php_admin_value[memory_limit] = 128M
 php_admin_value[error_log] = /home/<%= account.username %>/php-fpm.error_log
-php_admin_flag[log_errors] = Off
+php_admin_flag[log_errors] = On
