--- a/package.json
+++ b/package.json
@@ -12,12 +12,12 @@
     {
       "name": "jysperm",
       "email": "jysperm@gmail.com",
-      "url": "http://jysperm.me/"
+      "url": "http://jysperm.me"
     },
     {
       "name": "yudong",
       "email": "liyudonog1992@gmail.com",
-      "url": "feicunyue.com"
+      "url": "http://feicunyue.com"
     }
   ],
   "scripts": {
