--- a/package.json
+++ b/package.json
@@ -34,7 +34,7 @@
     "markdown": "*",
     "frisby": "*",
     "async": "*",
-    "connect": "*",
+    "connect": "~2.17.1",
     "harp": "*",
     "middleware-injector": "*",
     "tmp": "*",
