比特币支付：生成支付地址

--- a/package.json
+++ b/package.json
@@ -39,6 +39,7 @@
     "middleware-injector": "*",
     "tmp": "*",
     "mysql": "*",
-    "moment": "*"
+    "moment": "*",
+    "request": "*"
   }
 }
