--- a/package.json
+++ b/package.json
@@ -29,10 +29,8 @@
     "coffee-script": "*",
     "mongodb": "*",
     "underscore": "*",
-    "jasmine-node": "~1.14.3",
     "forever": "*",
     "markdown": "*",
-    "frisby": "*",
     "async": "*",
     "connect": "~2.17.1",
     "harp": "*",
@@ -40,6 +38,7 @@
     "tmp": "*",
     "mysql": "*",
     "moment": "*",
-    "request": "*"
+    "request": "*",
+    "mongo-min": "*"
   }
 }
