--- a/package.json
+++ b/package.json
@@ -24,7 +24,7 @@
     "start": "make run"
   },
   "dependencies": {
-    "jade": "*",
+    "jade": "^1.3",
     "express": "*",
     "coffee-script": "*",
     "mongodb": "*",
