--- a/plugin/nginx/template/site_configure.conf
+++ b/plugin/nginx/template/site_configure.conf
@@ -7,7 +7,7 @@ server {
 
     root <%= site.root %>;
 
-    <% _.each(site.location, function(rules, path) {
+    <% _.each(site.location, function(rules, path) { %>
         location <%= path %> {
             <% _.each(rules, function(param, command) { %>
                 <% if(_.isArray(param)) { %>
