--- a/plugin/phpfpm/template/fpm-pool.conf
+++ b/plugin/phpfpm/template/fpm-pool.conf
@@ -3,7 +3,7 @@
 user = <%= account.username %>
 group = <%= account.username %>
 
-listen = /home/<%= account.username %>/php-fpm.sock
+listen = /home/<%= account.username %>/phpfpm.sock
 
 listen.owner = <%= account.username %>
 listen.group = <%= account.username %>
@@ -14,10 +14,10 @@ pm.max_children = 3
 pm.process_idle_timeout = 10s
 pm.max_requests = 500
 
-slowlog = /home/<%= account.username %>/php-fpm.slowlog
+slowlog = /home/<%= account.username %>/phpfpm.slowlog
 request_slowlog_timeout = 5s
 request_terminate_timeout = 15s
 
 php_admin_value[memory_limit] = 128M
-php_admin_value[error_log] = /home/<%= account.username %>/php-fpm.error_log
+php_admin_value[error_log] = /home/<%= account.username %>/phpfpm_error.log
 php_admin_flag[log_errors] = On
