在后端支持 nginx 的新指令

--- a/plugin/nginx/template/site_configure.conf
+++ b/plugin/nginx/template/site_configure.conf
@@ -12,6 +12,8 @@ server {
             <% _.each(rules, function(param, command) { %>
                 <% if(_.isArray(param)) { %>
                     <%= command %> <%= param.join(' ') %>;
+                <% } else if(_.isBoolean(prarm)) { %>
+                    <%= command %> <%= param ? 'on' : 'off' %>;
                 <% } else { %>
                     <%= command %> <%= param %>;
                 <% } %>
