--- a/plugin/nginx/template/site_configure.conf
+++ b/plugin/nginx/template/site_configure.conf
@@ -12,7 +12,7 @@ server {
             <% _.each(rules, function(param, command) { %>
                 <% if(_.isArray(param)) { %>
                     <%= command %> <%= param.join(' ') %>;
-                <% } else if(_.isBoolean(prarm)) { %>
+                <% } else if(_.isBoolean(param)) { %>
                     <%= command %> <%= param ? 'on' : 'off' %>;
                 <% } else { %>
                     <%= command %> <%= param %>;
