--- a/plugin/nginx/template/site_configure.conf
+++ b/plugin/nginx/template/site_configure.conf
@@ -5,7 +5,9 @@ server {
     index <%= site.index.join(' ') %>;
     autoindex <%= site.auto_index ? 'on' : 'off' %>;
 
-    root <%= site.root %>;
+    <% if(site.root) { %>
+        root <%= site.root %>;
+    <% } %>
 
     <% _.each(site.location, function(rules, path) { %>
         location <%= path %> {
@@ -14,6 +16,10 @@ server {
                     <%= command %> <%= param.join(' ') %>;
                 <% } else if(_.isBoolean(param)) { %>
                     <%= command %> <%= param ? 'on' : 'off' %>;
+                <% } else if(_.isObject(param)) { %>
+                    <% _.each(param, function(param2, param1) { %>
+                        <%= command %> <%= param1 %> <%= param2 %>;
+                    <% }); %>
                 <% } else { %>
                     <%= command %> <%= param %>;
                 <% } %>
