--- a/package.json
+++ b/package.json
@@ -23,6 +23,12 @@
   "scripts": {
     "start": "make run"
   },
+  "bin": {
+    "rp-start": "./bin/rp-start.coffee",
+    "rp-fix-permissions": "./bin/rp-fix-permissions.coffee",
+    "rp-system-sync": "./bin/rp-system-sync.coffee",
+    "rp-migration": "./bin/rp-migration.coffee"
+  },
   "dependencies": {
     "jade": "^1.3",
     "express": "*",
