--- a/package.json
+++ b/package.json
@@ -27,7 +27,8 @@
     "rp-start": "./bin/rp-start.coffee",
     "rp-fix-permissions": "./bin/rp-fix-permissions.coffee",
     "rp-system-sync": "./bin/rp-system-sync.coffee",
-    "rp-migration": "./bin/rp-migration.coffee"
+    "rp-migration": "./bin/rp-migration.coffee",
+    "rp-clean": "./bin/rp-clean.coffee"
   },
   "dependencies": {
     "jade": "^1.3",
