--- a/plugin/shadowsocks/template/config.conf
+++ b/plugin/shadowsocks/template/config.conf
@@ -1,6 +1,6 @@
 {
     "server": "0.0.0.0",
-    "server_port": "<%= port %>",
+    "server_port": <%= port %>,
     "local_port": 1080,
     "password": "<%= password %>",
     "timeout": 60,
