--- a/package.json
+++ b/package.json
@@ -16,7 +16,7 @@
     }
   ],
   "scripts": {
-    "start": "make run"
+    "start": "node start.js"
   },
   "bin": {
     "rp-start": "./bin/rp-start.coffee",
@@ -31,7 +31,6 @@
     "coffee-script": "~1.7.1",
     "mongodb": "~1.4.8",
     "underscore": "~1.6.0",
-    "forever": "~0.11.1",
     "markdown": "~0.5.0",
     "async": "~0.9.0",
     "connect": "~2.17.3",
