--- a/package.json
+++ b/package.json
@@ -1,9 +1,9 @@
 {
   "name": "rootpanel",
-  "version": "0.7.2",
+  "version": "0.8.0",
   "description": "A linux virtual host management system with extensibility",
   "homepage": "http://rpvhost.net",
-  "license": "GPL-3.0",
+  "license": "AGPL-3.0",
   "repository": {
     "type": "git",
     "url": "https://github.com/jysperm/RootPanel.git"
@@ -25,21 +25,21 @@
     "rp-clean": "./bin/rp-clean.coffee"
   },
   "dependencies": {
-    "jade": "~1.3",
-    "express": "~4.8.4",
-    "coffee-script": "~1.7.1",
-    "mongodb": "~1.4.8",
-    "underscore": "~1.6.0",
-    "markdown": "~0.5.0",
-    "async": "~0.9.0",
-    "connect": "~2.17.3",
+    "jade": "^1.3",
+    "express": "^4.8.4",
+    "coffee-script": "^1.7.1",
+    "mongodb": "^1.4.8",
+    "underscore": "^1.6.0",
+    "markdown": "^0.5.0",
+    "async": "^0.9.0",
+    "connect": "^2.17.3",
     "harp": "~0.13.0",
-    "middleware-injector": "~0.1.1",
-    "tmp": "~0.0.24",
-    "mysql": "~2.4.2",
-    "moment-timezone": "~0.2.2",
-    "request": "~2.40.0",
-    "redis": "~0.12.1",
-    "nodemailer": "~0.7.1"
+    "middleware-injector": "^0.1.1",
+    "tmp": "^0.0.24",
+    "mysql": "^2.4.2",
+    "moment-timezone": "^0.2.2",
+    "request": "^2.40.0",
+    "redis": "^0.12.1",
+    "nodemailer": "^1.2.1"
   }
 }
