--- a/package.json
+++ b/package.json
@@ -1,45 +1,46 @@
 {
-  "name": "rootpanel",
-  "version": "0.8.0",
-  "description": "A linux virtual host management system with extensibility",
-  "homepage": "http://rpvhost.net",
-  "license": "AGPL-3.0",
-  "repository": {
-    "type": "git",
-    "url": "https://github.com/jysperm/RootPanel.git"
-  },
-  "contributors": [
-    {
-      "name": "jysperm",
-      "email": "jysperm@gmail.com",
-      "url": "http://jysperm.me"
+    "name": "rootpanel",
+    "version": "0.8.0",
+    "description": "A linux virtual host management system with extensibility",
+    "homepage": "http://rpvhost.net",
+    "license": "AGPL-3.0",
+    "repository": {
+        "type": "git",
+        "url": "https://github.com/jysperm/RootPanel.git"
+    },
+    "contributors": [
+        {
+            "name": "jysperm",
+            "email": "jysperm@gmail.com",
+            "url": "http://jysperm.me"
+        }
+    ],
+    "scripts": {
+        "start": "node start.js"
+    },
+    "bin": {
+        "rp-fix-permissions": "./bin/rp-fix-permissions.coffee",
+        "rp-system-sync": "./bin/rp-system-sync.coffee",
+        "rp-migration": "./bin/rp-migration.coffee",
+        "rp-clean": "./bin/rp-clean.coffee"
+    },
+    "dependencies": {
+        "accept-language": "^1.2.0",
+        "async": "^0.9.0",
+        "coffee-script": "^1.7.1",
+        "connect": "^2.17.3",
+        "express": "^4.8.4",
+        "harp": "~0.13.0",
+        "jade": "^1.3",
+        "markdown": "^0.5.0",
+        "middleware-injector": "^0.1.1",
+        "moment-timezone": "^0.2.2",
+        "mongodb": "^1.4.8",
+        "mysql": "^2.4.2",
+        "nodemailer": "^1.2.1",
+        "redis": "^0.12.1",
+        "request": "^2.40.0",
+        "tmp": "^0.0.24",
+        "underscore": "^1.6.0"
     }
-  ],
-  "scripts": {
-    "start": "node start.js"
-  },
-  "bin": {
-    "rp-fix-permissions": "./bin/rp-fix-permissions.coffee",
-    "rp-system-sync": "./bin/rp-system-sync.coffee",
-    "rp-migration": "./bin/rp-migration.coffee",
-    "rp-clean": "./bin/rp-clean.coffee"
-  },
-  "dependencies": {
-    "jade": "^1.3",
-    "express": "^4.8.4",
-    "coffee-script": "^1.7.1",
-    "mongodb": "^1.4.8",
-    "underscore": "^1.6.0",
-    "markdown": "^0.5.0",
-    "async": "^0.9.0",
-    "connect": "^2.17.3",
-    "harp": "~0.13.0",
-    "middleware-injector": "^0.1.1",
-    "tmp": "^0.0.24",
-    "mysql": "^2.4.2",
-    "moment-timezone": "^0.2.2",
-    "request": "^2.40.0",
-    "redis": "^0.12.1",
-    "nodemailer": "^1.2.1"
-  }
 }
