--- a/package.json
+++ b/package.json
@@ -30,8 +30,8 @@
         "coffee-script": "^1.7.1",
         "connect": "^2.17.3",
         "express": "^4.8.4",
-        "harp": "~0.13.0",
-        "jade": "^1.3",
+        "harp": "^0.13.0",
+        "jade": "^1.3.1",
         "markdown": "^0.5.0",
         "middleware-injector": "^0.1.1",
         "moment-timezone": "^0.2.2",
