--- a/package.json
+++ b/package.json
@@ -41,6 +41,7 @@
         "redis": "^0.12.1",
         "request": "^2.40.0",
         "tmp": "^0.0.24",
-        "underscore": "^1.6.0"
+        "underscore": "^1.6.0",
+        "json-stable-stringify": "^1.0.0"
     }
 }
