--- a/package.json
+++ b/package.json
@@ -25,7 +25,7 @@
         "rp-clean": "./bin/rp-clean.coffee"
     },
     "dependencies": {
-        "accept-language": "^1.2.0",
+        "negotiator": "^0.4.8",
         "async": "^0.9.0",
         "coffee-script": "^1.7.1",
         "connect": "^2.17.3",
