--- a/package.json
+++ b/package.json
@@ -43,6 +43,7 @@
         "tmp": "^0.0.24",
         "underscore": "^1.6.0",
         "json-stable-stringify": "^1.0.0",
-        "counter-cache": "^0.1.0"
+        "counter-cache": "^0.1.0",
+        "cookie-parser": "^1.3.3"
     }
 }
