--- a/package.json
+++ b/package.json
@@ -47,6 +47,7 @@
     "cookie-parser": "^1.3.3",
     "csrf": "^2.0.1",
     "connect-redis": "^2.0.1",
-    "express-session": "^1.8.2"
+    "express-session": "^1.8.2",
+    "morgan": "^1.3.2"
   }
 }
