--- a/package.json
+++ b/package.json
@@ -16,7 +16,8 @@
     }
   ],
   "scripts": {
-    "start": "node start.js"
+    "start": "coffee app.coffee",
+    "test": "./node_modules/.bin/mocha --compilers coffee:coffee-script/register --require test/support/env core/test plugin/*/test"
   },
   "bin": {
     "rp-fix-permissions": "./bin/rp-fix-permissions.coffee",
@@ -28,7 +29,6 @@
     "negotiator": "^0.4.8",
     "async": "^0.9.0",
     "coffee-script": "^1.7.1",
-    "connect": "^2.17.3",
     "express": "^4.8.4",
     "harp": "^0.13.0",
     "jade": "^1.3.1",
@@ -48,6 +48,14 @@
     "csrf": "^2.0.1",
     "connect-redis": "^2.0.1",
     "express-session": "^1.8.2",
-    "morgan": "^1.3.2"
+    "morgan": "^1.3.2",
+    "mongoose": "^3.8.17",
+    "depd": "^1.0.0",
+    "body-parser": "^1.9.0"
+  },
+  "devDependencies": {
+    "mocha": "^1.21.5",
+    "chai": "^1.9.2",
+    "deepmerge": "^0.2.7"
   }
 }
