--- a/package.json
+++ b/package.json
@@ -16,8 +16,10 @@
     }
   ],
   "scripts": {
-    "start": "coffee app.coffee",
-    "test": "./node_modules/.bin/mocha --compilers coffee:coffee-script/register --require test/support/env core/test plugin/*/test"
+    "start": "./node_modules/.bin/coffee app.coffee",
+    "test": "COV_TEST=true ./node_modules/.bin/mocha --compilers coffee:coffee-script/register --require test/support/env --reporter test/support/reporter-cov-summary.js -- core/test plugin/*/test",
+    "test-only": "./node_modules/.bin/mocha --compilers coffee:coffee-script/register --require test/support/env -- core/test plugin/*/test",
+    "test-cov-html": "COV_TEST=true ./node_modules/.bin/mocha --compilers coffee:coffee-script/register --require test/support/env --reporter html-cov -- core/test plugin/*/test > coverage-reporter.html"
   },
   "bin": {
     "rp-fix-permissions": "./bin/rp-fix-permissions.coffee",
@@ -56,6 +58,6 @@
   "devDependencies": {
     "mocha": "^1.21.5",
     "chai": "^1.9.2",
-    "deepmerge": "^0.2.7"
+    "coffee-coverage": "^0.4.2"
   }
 }
