--- a/package.json
+++ b/package.json
@@ -53,7 +53,8 @@
     "morgan": "^1.3.2",
     "mongoose": "^3.8.17",
     "depd": "^1.0.0",
-    "body-parser": "^1.9.0"
+    "body-parser": "^1.9.0",
+    "copy-to": "^1.0.1"
   },
   "devDependencies": {
     "mocha": "^1.21.5",
