some validators of account model

--- a/package.json
+++ b/package.json
@@ -28,37 +28,38 @@
     "rp-clean": "./bin/rp-clean.coffee"
   },
   "dependencies": {
-    "negotiator": "^0.4.8",
     "async": "^0.9.0",
+    "body-parser": "^1.9.0",
     "coffee-script": "^1.7.1",
+    "connect-redis": "^2.0.1",
+    "cookie-parser": "^1.3.3",
+    "copy-to": "^1.0.1",
+    "counter-cache": "^0.1.0",
+    "csrf": "^2.0.1",
+    "deepmerge": "^0.2.7",
+    "depd": "^1.0.0",
     "express": "^4.8.4",
+    "express-session": "^1.8.2",
     "harp": "^0.13.0",
     "jade": "^1.3.1",
+    "json-stable-stringify": "^1.0.0",
     "markdown": "^0.5.0",
     "middleware-injector": "^0.1.1",
     "moment-timezone": "^0.2.2",
     "mongodb": "^1.4.8",
+    "mongoose": "^3.8.17",
+    "mongoose-unique-validator": "^0.4.1",
+    "morgan": "^1.3.2",
     "mysql": "^2.4.2",
+    "negotiator": "^0.4.8",
     "nodemailer": "^1.2.1",
     "redis": "^0.12.1",
     "request": "^2.45.0",
     "tmp": "^0.0.24",
-    "underscore": "^1.6.0",
-    "json-stable-stringify": "^1.0.0",
-    "counter-cache": "^0.1.0",
-    "cookie-parser": "^1.3.3",
-    "csrf": "^2.0.1",
-    "connect-redis": "^2.0.1",
-    "express-session": "^1.8.2",
-    "morgan": "^1.3.2",
-    "mongoose": "^3.8.17",
-    "depd": "^1.0.0",
-    "body-parser": "^1.9.0",
-    "copy-to": "^1.0.1",
-    "deepmerge": "^0.2.7"
+    "underscore": "^1.6.0"
   },
   "devDependencies": {
-    "mocha": "^1.21.5",
+    "mocha": "^2.0.0",
     "chai": "^1.9.2",
     "coffee-coverage": "^0.4.2"
   }
