--- a/package.json
+++ b/package.json
@@ -61,6 +61,7 @@
   "devDependencies": {
     "mocha": "^2.0.0",
     "chai": "^1.9.2",
-    "coffee-coverage": "^0.4.2"
+    "coffee-coverage": "^0.4.2",
+    "supertest": "^0.14.0"
   }
 }
