--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
   ],
   "scripts": {
     "start": "./node_modules/.bin/coffee app.coffee",
+    "migrate": "./node_modules/.bin/coffee migration/migrate.coffee",
     "test": "COV_TEST=true ./node_modules/.bin/mocha --compilers coffee:coffee-script/register --require test/support/env --reporter test/support/reporter-cov-summary.js -- core/test/*.test.coffee core/test/*/*.test.coffee plugin/*/test",
     "test-only": "./node_modules/.bin/mocha --compilers coffee:coffee-script/register --require test/support/env -- core/test/*.test.coffee core/test/*/*.test.coffee plugin/*/test",
     "test-cov-html": "COV_TEST=true ./node_modules/.bin/mocha --compilers coffee:coffee-script/register --require test/support/env --reporter html-cov -- core/test/*.test.coffee core/test/*/*.test.coffee plugin/*/test > coverage-reporter.html"
@@ -24,7 +25,6 @@
   "bin": {
     "rp-fix-permissions": "./bin/rp-fix-permissions.coffee",
     "rp-system-sync": "./bin/rp-system-sync.coffee",
-    "rp-migration": "./bin/rp-migration.coffee",
     "rp-clean": "./bin/rp-clean.coffee"
   },
   "dependencies": {
@@ -56,7 +56,8 @@
     "redis": "^0.12.1",
     "request": "^2.45.0",
     "tmp": "^0.0.24",
-    "underscore": "^1.6.0"
+    "underscore": "^1.6.0",
+    "semver": "^4.1.0"
   },
   "devDependencies": {
     "mocha": "^2.0.0",
