--- a/.travis.yml
+++ b/.travis.yml
@@ -4,6 +4,10 @@ node_js:
   - 0.11
   - 0.10
 
+before_install:
+  - sudo apt-get update -qq
+  - sudo apt-get install -y quota quotatool
+
 script: npm run test-full
 
 services:
