refactor part of shadowsocks core

--- a/plugin/shadowsocks/template/config.conf
+++ b/plugin/shadowsocks/template/config.conf
@@ -1,8 +1,16 @@
 {
     "server": "0.0.0.0",
-    "server_port": <%= port %>,
     "local_port": 1080,
-    "password": "<%= password %>",
+    "port_password": {
+<% users.forEach(function(user) { %>
+        "<%= user.port %>": "<%= %>"
+<% }); %>
+        "8381": "foobar1",
+        "8382": "foobar2",
+        "8383": "foobar3",
+        "8384": "foobar4"
+    },
     "timeout": 60,
-    "method": "aes-256-cfb"
+    "method": "aes-256-cfb",
+    "workers": 2
 }
