--- a/plugin/supervisor/template/program.conf
+++ b/plugin/supervisor/template/program.conf
@@ -1,4 +1,4 @@
-[program:<%= name_prefix %><%= account.username %>-<%= program.name %>]
+[program:<%= program.program_name %>]
 command = <%= program.command %>
 process_name = <%= program.name %>
 autostart = <%= program.autostart.toString() %>
