--- a/package.json
+++ b/package.json
@@ -17,7 +17,7 @@
   ],
   "scripts": {
     "start": "./node_modules/.bin/coffee app.coffee",
-    "migrate": "./node_modules/.bin/coffee migration/migrate.coffee",
+    "migrate": "./node_modules/.bin/coffee bin/rp-migrate.coffee",
     "test": "COV_TEST=true ./node_modules/.bin/mocha --compilers coffee:coffee-script/register --require test/env --reporter node_modules/mocha-reporter-cov-summary -- core/test/*.test.coffee core/test/*/*.test.coffee plugin/*/test",
     "test-only": "./node_modules/.bin/mocha --compilers coffee:coffee-script/register --require test/env -- core/test/*.test.coffee core/test/*/*.test.coffee plugin/*/test",
     "test-full": "./node_modules/.bin/coffee test/full-test.coffee",
