--- a/plugin/supervisor/template/program.conf
+++ b/plugin/supervisor/template/program.conf
@@ -4,7 +4,9 @@ autostart = <%= program.autostart.toString() %>
 autorestart = <%= program.autorestart %>
 user = <%= account.username %>
 redirect_stderr = true
+<% if (program.stdout_logfile !== false) { %>
 stdout_logfile = /home/<%= account.username %>/supervisor-<%= program.name %>.log
+<% } %>
 <% if(program.directory) { %>
 directory = <%= program.directory %>
 <% } %>
