--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "rootpanel",
-  "version": "0.8.0-rc.1",
+  "version": "0.8.0",
   "description": "A pluggable PaaS service development framework",
   "homepage": "https://rootpanel.io",
   "license": "AGPL-3.0",
