--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "rootpanel",
-  "version": "0.8.0",
+  "version": "0.8.1",
   "description": "A pluggable PaaS service development framework",
   "homepage": "https://rootpanel.io",
   "license": "AGPL-3.0",
@@ -26,42 +26,42 @@
   },
   "dependencies": {
     "async": "^0.9.0",
-    "body-parser": "^1.9.0",
-    "coffee-script": "^1.7.1",
-    "connect-redis": "^2.0.1",
+    "body-parser": "^1.9.3",
+    "bunyan": "^1.2.3",
+    "coffee-script": "^1.8.0",
+    "connect-redis": "^2.1.0",
     "cookie-parser": "^1.3.3",
-    "copy-to": "^1.0.1",
     "counter-cache": "^0.1.0",
-    "csrf": "^2.0.1",
+    "csrf": "^2.0.2",
     "deepmerge": "^0.2.7",
     "depd": "^1.0.0",
-    "express": "^4.8.4",
-    "express-session": "^1.8.2",
-    "harp": "^0.13.0",
-    "jade": "^1.3.1",
+    "express": "^4.10.4",
+    "express-bunyan-logger": "^1.1.0",
+    "express-session": "^1.9.2",
+    "get-parameter-names": "^0.2.0",
+    "harp": "^0.14.0",
+    "jade": "^1.7.0",
     "json-stable-stringify": "^1.0.0",
     "markdown": "^0.5.0",
-    "middleware-injector": "^0.1.1",
-    "moment-timezone": "^0.2.2",
-    "mongodb": "^1.4.8",
-    "mongoose": "^3.8.17",
+    "moment-timezone": "^0.2.5",
+    "mongodb": "^2.0.7",
+    "mongoose": "^3.8.19",
     "mongoose-unique-validator": "^0.4.1",
-    "morgan": "^1.3.2",
-    "mysql": "^2.4.2",
-    "negotiator": "^0.4.8",
-    "nodemailer": "^1.2.1",
+    "morgan": "^1.5.0",
+    "mysql": "^2.5.3",
+    "negotiator": "^0.4.9",
+    "nodemailer": "^1.3.0",
     "redis": "^0.12.1",
-    "request": "^2.45.0",
-    "tmp": "^0.0.24",
-    "underscore": "^1.6.0",
+    "request": "^2.48.0",
     "semver": "^4.1.0",
-    "get-parameter-names": "^0.2.0"
+    "tmp": "0.0.24",
+    "underscore": "^1.7.0"
   },
   "devDependencies": {
-    "mocha": "^2.0.0",
-    "chai": "^1.9.2",
+    "chai": "^1.10.0",
     "coffee-coverage": "^0.4.2",
-    "supertest": "^0.14.0",
-    "mocha-reporter-cov-summary": "^0.1.0"
+    "mocha": "^2.0.1",
+    "mocha-reporter-cov-summary": "^0.1.0",
+    "supertest": "^0.15.0"
   }
 }
