--- a/package.json
+++ b/package.json
@@ -16,7 +16,7 @@
     }
   ],
   "scripts": {
-    "start": "./node_modules/.bin/coffee app.coffee",
+    "start": "./node_modules/.bin/coffee app.coffee | ./node_modules/.bin/bunyan -o short",
     "migrate": "./node_modules/.bin/coffee bin/migrate.coffee",
     "reconfigure": "./node_modules/.bin/coffee bin/reconfigure.coffee",
     "test": "COV_TEST=true ./node_modules/.bin/mocha --compilers coffee:coffee-script/register --require test/env --reporter node_modules/mocha-reporter-cov-summary -- core/test/*.test.coffee core/test/*/*.test.coffee plugin/*/test",
