move fix-permissions to linux/bin

--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
   "scripts": {
     "start": "./node_modules/.bin/coffee app.coffee | ./node_modules/.bin/bunyan -o short",
     "migrate": "./node_modules/.bin/coffee bin/migrate.coffee",
+    "tool": "./node_modules/.bin/coffee bin/tool.coffee",
     "reconfigure": "./node_modules/.bin/coffee bin/reconfigure.coffee",
     "test": "COV_TEST=true ./node_modules/.bin/mocha --compilers coffee:coffee-script/register --require test/env --reporter node_modules/mocha-reporter-cov-summary -- core/test/*.test.coffee core/test/*/*.test.coffee plugin/*/test",
     "test-only": "./node_modules/.bin/mocha --compilers coffee:coffee-script/register --require test/env -- core/test/*.test.coffee core/test/*/*.test.coffee plugin/*/test",
