--- a/package.json
+++ b/package.json
@@ -21,7 +21,7 @@
     "tool": "./node_modules/.bin/coffee bin/tool.coffee",
     "reconfigure": "./node_modules/.bin/coffee bin/reconfigure.coffee",
     "test": "COV_TEST=true ./node_modules/.bin/mocha --compilers coffee:coffee-script/register --require test/env --reporter node_modules/mocha-reporter-cov-summary -- core/test/*.test.coffee core/test/*/*.test.coffee plugin/*/test",
-    "test-only": "./node_modules/.bin/mocha --compilers coffee:coffee-script/register --require test/env -- core/test/*.test.coffee core/test/*/*.test.coffee plugin/*/test",
+    "test-only": "./node_modules/.bin/mocha --compilers coffee:coffee-script/register --require test/env -b -- core/test/*.test.coffee core/test/*/*.test.coffee plugin/*/test",
     "test-full": "./node_modules/.bin/coffee test/full-test.coffee",
     "test-cov-html": "COV_TEST=true ./node_modules/.bin/mocha --compilers coffee:coffee-script/register --require test/env --reporter html-cov -- core/test/*.test.coffee core/test/*/*.test.coffee plugin/*/test > coverage-reporter.html"
   },
@@ -54,7 +54,8 @@
     "redis": "^0.12.1",
     "request": "^2.48.0",
     "semver": "^4.1.0",
-    "tmp": "0.0.24",
+    "ssh2": "^0.3.6",
+    "tmp": "^0.0.24",
     "underscore": "^1.7.0"
   },
   "devDependencies": {
