--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
     "async": "^0.9.0",
     "body-parser": "^1.9.3",
     "bunyan": "^1.2.3",
+    "insight": "^0.4.3",
     "coffee-script": "^1.8.0",
     "connect-redis": "^2.1.0",
     "cookie-parser": "^1.3.3",
@@ -55,7 +56,6 @@
     "request": "^2.48.0",
     "semver": "^4.1.0",
     "ssh2": "^0.3.6",
-    "tmp": "^0.0.24",
     "underscore": "^1.7.0"
   },
   "devDependencies": {
