--- a/.travis.yml
+++ b/.travis.yml
@@ -12,6 +12,7 @@ before_install:
   - sudo mkdir /etc/shadowsocks
   - ssh-keygen -b 2048 -t rsa -f ~/.ssh/id_rsa -q -N ''
   - cat ~/.ssh/id_rsa.pub >> ~/.ssh/authorized_keys
+  - chmod -R 700 ~/.ssh
 
 script: npm run test-all-config
 
