--- a/bower.json
+++ b/bower.json
@@ -4,6 +4,7 @@
     "bootstrap": "~3.3.1",
     "jquery-cookie": "~1.4.1",
     "underscore": "~1.7.0",
-    "jquery": "~2.1.2"
+    "jquery": "~2.1.2",
+    "backbone": "~1.1.2"
   }
 }
