--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "rootpanel",
   "version": "0.8.1",
   "description": "A pluggable PaaS service development framework",
-  "homepage": "https://rootpanel.io",
+  "homepage": "http://rootpanel.io",
   "license": "AGPL-3.0",
   "repository": {
     "type": "git",
@@ -28,10 +28,9 @@
   },
   "dependencies": {
     "async": "^0.9.0",
-    "bower": "^1.3.12",
     "body-parser": "^1.9.3",
+    "bower": "^1.3.12",
     "bunyan": "^1.2.3",
-    "insight": "^0.4.3",
     "coffee-script": "^1.8.0",
     "connect-redis": "^2.1.0",
     "cookie-parser": "^1.3.3",
@@ -43,6 +42,7 @@
     "express-session": "^1.9.2",
     "get-parameter-names": "^0.2.0",
     "harp": "^0.14.0",
+    "insight": "^0.4.3",
     "jade": "^1.7.0",
     "json-stable-stringify": "^1.0.0",
     "markdown": "^0.5.0",
