--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "rootpanel",
-  "version": "0.8.1",
+  "version": "0.9.0",
   "description": "A pluggable PaaS service development framework",
   "homepage": "http://rootpanel.io",
   "license": "AGPL-3.0",
@@ -31,6 +31,7 @@
     "body-parser": "^1.9.3",
     "bower": "^1.3.12",
     "bunyan": "^1.2.3",
+    "bunyan-mongo": "^0.1.0",
     "coffee-script": "^1.8.0",
     "connect-redis": "^2.1.0",
     "cookie-parser": "^1.3.3",
@@ -45,6 +46,7 @@
     "insight": "^0.4.3",
     "jade": "^1.7.0",
     "json-stable-stringify": "^1.0.0",
+    "mabolo": "^0.1.3",
     "markdown": "^0.5.0",
     "moment-timezone": "^0.2.5",
     "mongodb": "^2.0.7",
@@ -62,7 +64,7 @@
   },
   "devDependencies": {
     "chai": "^1.10.0",
-    "coffee-coverage": "^0.4.2",
+    "coffee-coverage": "0.4.2",
     "mocha": "^2.0.1",
     "mocha-reporter-cov-summary": "^0.1.0",
     "supertest": "^0.15.0"
