--- a/bower.json
+++ b/bower.json
@@ -6,6 +6,7 @@
     "underscore": "~1.7.0",
     "jquery": "~2.1.2",
     "backbone": "~1.1.2",
-    "moment": "~2.9.0"
+    "moment": "~2.9.0",
+    "jquery-tmpl": "*"
   }
 }
