--- a/.travis.yml
+++ b/.travis.yml
@@ -13,8 +13,9 @@ before_install:
   - ssh-keygen -b 2048 -t rsa -f ~/.ssh/id_rsa -q -N ''
   - cat ~/.ssh/id_rsa.pub >> ~/.ssh/authorized_keys
   - chmod -R 700 ~/.ssh
+  - cp sample/core.config.coffee config.coffee
 
-script: npm run test-all-config
+script: npm test
 
 services:
   - mongodb
