--- a/package.json
+++ b/package.json
@@ -18,9 +18,7 @@
   "scripts": {
     "install": "./node_modules/.bin/bower install",
     "start": "./node_modules/.bin/coffee app.coffee | ./node_modules/.bin/bunyan -o short",
-    "test": "COV_TEST=true ./node_modules/.bin/mocha --compilers coffee:coffee-script/register --require test/env --reporter node_modules/mocha-reporter-cov-summary -- core/test/*.test.coffee plugins/*/test",
-    "test-only": "./node_modules/.bin/mocha --compilers coffee:coffee-script/register --require test/env -b -- core/test/*.test.coffee plugins/*/test",
-    "test-cov-html": "COV_TEST=true ./node_modules/.bin/mocha --compilers coffee:coffee-script/register --require test/env --reporter html-cov -- core/test/*.test.coffee plugins/*/test > coverage-reporter.html"
+    "test": "COV_TEST=true ./node_modules/.bin/mocha --compilers coffee:coffee-script/register --require test/env --reporter node_modules/mocha-reporter-cov-summary -- core/test/*.test.coffee plugins/*/test"
   },
   "dependencies": {
     "async": "^0.9.0",
@@ -42,7 +40,7 @@
     "insight": "^0.4.3",
     "jade": "^1.7.0",
     "json-stable-stringify": "^1.0.0",
-    "mabolo": "^0.1.3",
+    "mabolo": "^0.3.0-rc.1",
     "markdown": "^0.5.0",
     "moment-timezone": "^0.2.5",
     "mongodb": "^2.0.7",
@@ -54,7 +52,8 @@
     "request": "^2.48.0",
     "semver": "^4.1.0",
     "ssh2": "^0.3.6",
-    "underscore": "^1.7.0"
+    "underscore": "^1.7.0",
+    "q": "^1.2.0"
   },
   "devDependencies": {
     "chai": "^1.10.0",
