--- a/package.json
+++ b/package.json
@@ -40,6 +40,7 @@
     "insight": "^0.4.3",
     "jade": "^1.7.0",
     "json-stable-stringify": "^1.0.0",
+    "lodash": "^3.6.0",
     "mabolo": "^0.3.0-rc.1",
     "markdown": "^0.5.0",
     "moment-timezone": "^0.2.5",
@@ -48,12 +49,12 @@
     "mysql": "^2.5.3",
     "negotiator": "^0.4.9",
     "nodemailer": "^1.3.0",
+    "q": "^1.2.0",
     "redis": "^0.12.1",
     "request": "^2.48.0",
     "semver": "^4.1.0",
     "ssh2": "^0.3.6",
-    "underscore": "^1.7.0",
-    "q": "^1.2.0"
+    "underscore": "^1.7.0"
   },
   "devDependencies": {
     "chai": "^1.10.0",
