--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
   },
   "dependencies": {
     "async": "^0.9.0",
+    "async-q": "^0.2.2",
     "body-parser": "^1.9.3",
     "bower": "^1.3.12",
     "bunyan": "^1.2.3",
@@ -37,8 +38,8 @@
     "express-session": "^1.9.2",
     "get-parameter-names": "^0.2.0",
     "harp": "^0.14.0",
-    "insight": "^0.4.3",
-    "jade": "^1.7.0",
+    "insight": "^0.5.3",
+    "jade": "^1.9.2",
     "json-stable-stringify": "^1.0.0",
     "lodash": "^3.6.0",
     "mabolo": "^0.3.0-rc.1",
@@ -50,11 +51,13 @@
     "negotiator": "^0.4.9",
     "nodemailer": "^1.3.0",
     "q": "^1.2.0",
+    "q-io": "^1.12.0",
     "redis": "^0.12.1",
     "request": "^2.48.0",
     "semver": "^4.1.0",
     "ssh2": "^0.3.6",
-    "underscore": "^1.7.0"
+    "underscore": "^1.7.0",
+    "validator": "^3.37.0"
   },
   "devDependencies": {
     "chai": "^1.10.0",
