--- a/bower.json
+++ b/bower.json
@@ -7,6 +7,6 @@
     "jquery": "~2.1.2",
     "backbone": "~1.1.2",
     "moment": "~2.9.0",
-    "jquery-tmpl": "*"
+    "jquery-tmpl": "~1.0.0"
   }
 }
