--- a/package.json
+++ b/package.json
@@ -39,7 +39,6 @@
     "express": "^4.10.4",
     "express-bunyan-logger": "^1.1.0",
     "express-session": "^1.9.2",
-    "get-parameter-names": "^0.2.0",
     "insight": "^0.5.3",
     "jade": "^1.9.2",
     "json-stable-stringify": "^1.0.0",
@@ -59,7 +58,8 @@
     "semver": "^4.1.0",
     "ssh2": "^0.3.6",
     "underscore": "^1.7.0",
-    "validator": "^3.37.0"
+    "validator": "^3.37.0",
+    "ioredis": "^1.3.6"
   },
   "devDependencies": {
     "chai": "^1.10.0",
