--- a/package.json
+++ b/package.json
@@ -19,67 +19,67 @@
   "scripts": {
     "prepushlish": "bower install && gulp build",
     "start": "coffee app.coffee",
-    "test": "mocha --compilers coffee:coffee-script/register --require test/env --recursive core/test",
+    "test": "mocha --compilers coffee:coffee-script/register --require test/init --recursive core/test",
     "docker-build": "docker build -t=jysperm/rootpanel .",
-    "docker-create": "docker run --name rootpanel -P -v `pwd`:/rootpanel -i -t jysperm/rootpanel",
+    "docker-create": "docker run --name rootpanel -P jysperm/rootpanel",
     "docker-start": "docker start -i -a rootpanel"
   },
   "dependencies": {
-    "async": "^0.9.0",
-    "async-q": "^0.2.2",
-    "body-parser": "^1.9.3",
-    "bower": "^1.3.12",
-    "bunyan-mongo": "^0.1.0",
-    "coffee-script": "^1.8.0",
-    "connect-redis": "^2.1.0",
-    "cookie-parser": "^1.3.3",
-    "counter-cache": "^0.1.0",
-    "csrf": "^2.0.2",
-    "deepmerge": "^0.2.7",
-    "express": "^4.10.4",
-    "express-bunyan-logger": "^1.1.0",
-    "express-session": "^1.9.2",
-    "insight": "^0.5.3",
-    "jade": "^1.9.2",
-    "json-stable-stringify": "^1.0.0",
-    "lodash": "^3.6.0",
-    "mabolo": "^0.3.1",
-    "markdown": "^0.5.0",
-    "moment-timezone": "^0.2.5",
-    "mongodb": "^2.0.7",
-    "morgan": "^1.5.0",
-    "mysql": "^2.5.3",
-    "negotiator": "^0.4.9",
-    "nodemailer": "^1.3.0",
-    "q": "^1.2.0",
-    "q-io": "^1.12.0",
-    "redis": "^0.12.1",
-    "request": "^2.55.0",
-    "semver": "^4.1.0",
-    "ssh2": "^0.3.6",
-    "underscore": "^1.7.0",
-    "validator": "^3.37.0",
-    "ioredis": "^1.3.6"
+    "async": "0.9.0",
+    "async-q": "0.2.2",
+    "body-parser": "1.9.3",
+    "bower": "1.3.12",
+    "bunyan-mongo": "0.1.0",
+    "coffee-script": "1.8.0",
+    "connect-redis": "2.1.0",
+    "cookie-parser": "1.3.3",
+    "counter-cache": "0.1.0",
+    "csrf": "2.0.2",
+    "deepmerge": "0.2.7",
+    "express": "4.10.4",
+    "express-bunyan-logger": "1.1.0",
+    "express-session": "1.9.2",
+    "insight": "0.5.3",
+    "jade": "1.9.2",
+    "json-stable-stringify": "1.0.0",
+    "lodash": "3.6.0",
+    "mabolo": "0.3.2",
+    "markdown": "0.5.0",
+    "moment-timezone": "0.2.5",
+    "mongodb": "2.0.7",
+    "morgan": "1.5.0",
+    "mysql": "2.5.3",
+    "negotiator": "0.4.9",
+    "nodemailer": "1.3.0",
+    "q": "1.2.0",
+    "q-io": "1.12.0",
+    "redis": "0.12.1",
+    "request": "2.55.0",
+    "semver": "4.1.0",
+    "ssh2": "0.3.6",
+    "underscore": "1.7.0",
+    "validator": "3.37.0",
+    "ioredis": "1.3.6"
   },
   "devDependencies": {
-    "chai": "^1.10.0",
+    "chai": "1.10.0",
     "coffee-coverage": "0.4.2",
-    "del": "^1.1.1",
-    "gulp": "^3.8.11",
-    "gulp-coffee": "^2.3.1",
-    "gulp-concat": "^2.5.2",
-    "gulp-debug": "^2.0.1",
-    "gulp-filter": "^2.0.2",
-    "gulp-less": "^3.0.3",
-    "gulp-minify-css": "^1.1.0",
-    "gulp-order": "^1.1.1",
+    "del": "1.1.1",
+    "gulp": "3.8.11",
+    "gulp-coffee": "2.3.1",
+    "gulp-concat": "2.5.2",
+    "gulp-debug": "2.0.1",
+    "gulp-filter": "2.0.2",
+    "gulp-less": "3.0.3",
+    "gulp-minify-css": "1.1.0",
+    "gulp-order": "1.1.1",
     "gulp-rsync": "0.0.5",
-    "gulp-shell": "^0.4.1",
-    "gulp-uglify": "^1.2.0",
-    "main-bower-files": "^2.7.0",
-    "mocha": "^2.0.1",
-    "mocha-reporter-cov-summary": "^0.1.0",
-    "run-sequence": "^1.1.0",
-    "supertest": "^0.15.0"
+    "gulp-shell": "0.4.1",
+    "gulp-uglify": "1.2.0",
+    "main-bower-files": "2.7.0",
+    "mocha": "2.0.1",
+    "mocha-reporter-cov-summary": "0.1.0",
+    "run-sequence": "1.1.0",
+    "supertest": "0.15.0"
   }
 }
