--- a/package.json
+++ b/package.json
@@ -59,7 +59,13 @@
     "ssh2": "0.3.6",
     "underscore": "1.7.0",
     "validator": "3.37.0",
-    "ioredis": "1.3.6"
+    "ioredis": "1.3.6",
+    "react": "0.13.3",
+    "node-jsx": "0.13.3",
+    "react-bootstrap": "0.24.5",
+    "backbone": "1.1.2",
+    "jquery": "2.1.4",
+    "js-cookie": "2.0.3"
   },
   "devDependencies": {
     "chai": "1.10.0",
@@ -80,6 +86,10 @@
     "mocha": "2.0.1",
     "mocha-reporter-cov-summary": "0.1.0",
     "run-sequence": "1.1.0",
-    "supertest": "0.15.0"
+    "supertest": "0.15.0",
+    "browserify": "11.0.1",
+    "reactify": "1.1.1",
+    "vinyl-source-stream": "1.1.0",
+    "coffeeify": "1.1.0"
   }
 }
